src/objects/SomDig_Commitment__c.object
<CustomObject>
    <description>fasst die heutigen Commitments der Division Digital (aufgebaut im Bezug auf WT-AG Beziehung)</description>
    <fields>
        <fullName>SomDig_AJ__c</fullName>
        <description>Hilfsfeld, dient dazu um Commitment-Value über Roll-up Summary auf WT-AG, bzw WT Ebene zu übertragen</description>
        <formula>YEAR (SomDig_GueltigVon__c ) &lt;= YEAR(TODAY()) 
&amp;&amp; 
YEAR (SomDig_GueltigBis__c ) &gt;= YEAR(TODAY())</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AJ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SomDig_AbweichungZurPrognoseGesamtWT_AG__c</fullName>
        <description>Wie gross ist die Abweichung zwischen Prognose Gesamt der Beziehung Werbetreibende-Agentur (Zusammenfassung aller Prognosen am Junction Objekt) und dem Commitmentwert.</description>
        <formula>SomDig_WtAgBeziehung__r.SomDig_PrognoseGesamtAj__c - SomDig_UmsatzGesamtMN2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Wie gross ist die Abweichung in EUR zwischen Prognose Gesamt der Beziehung Werbetreibende-Agentur (Zusammenfassung aller Prognosen am Junction Objekt) und dem Commitmentwert.</inlineHelpText>
        <label>Abweichung zur Prognose Gesamt WT-AG (€)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SomDig_AbweichungZurPrognoseGesamtWT_AGp__c</fullName>
        <description>Wie gross in % ist die Abweichung zwischen Prognose Gesamt der Beziehung Werbetreibende Agentur (Zusammenfassung aller Prognosen am WT-AG) und dem Commitmentwert.</description>
        <formula>SomDig_AbweichungZurPrognoseGesamtWT_AG__c /  SomDig_UmsatzGesamtMN2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Wie gross in % ist die Abweichung zwischen Prognose Gesamt der Beziehung Werbetreibende Agentur (Zusammenfassung aller Prognosen am WT-AG) und dem Commitmentwert.</inlineHelpText>
        <label>Abweichung zur Prognose Gesamt WT-AG (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SomDig_Agentur_Rabatt__c</fullName>
        <description>Agentur-Rabatt ist einzutragen (gilt für alle Rabatte nach MG-Seg und MG-Diff)</description>
        <inlineHelpText>Agentur-Rabatt ist einzutragen (gilt für alle Rabatte nach MG-Seg und MG-Diff)</inlineHelpText>
        <label>Agentur-Rabatt</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SomDig_Agentur__c</fullName>
        <description>übernommen aus der Beziehung WT-AG</description>
        <formula>SomDig_WtAgBeziehung__r.SomDig_Agentur__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>übernommen aus der Beziehung WT-AG</inlineHelpText>
        <label>Agentur</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SomDig_AnteilCommitmentsAJ__c</fullName>
        <description>zeigt Anteil des Commitments im AJ</description>
        <formula>IF(AND(YEAR(TODAY()) = YEAR (SomDig_GueltigVon__c ), YEAR(TODAY()) = YEAR (SomDig_GueltigBis__c )
), SomDig_UmsatzGesamtMN2__c,
IF(AND(YEAR(TODAY())-1 = YEAR (SomDig_GueltigVon__c ), YEAR(TODAY()) = YEAR (SomDig_GueltigBis__c )
), SomDig_UmsatzGesamtMN2__c*(SomDig_GueltigBis__c - DATE(YEAR(TODAY()),1,1) + 1)/(SomDig_GueltigBis__c-SomDig_GueltigVon__c+1),  
IF(AND(YEAR(TODAY()) = YEAR (SomDig_GueltigVon__c ), YEAR(TODAY())+1 = YEAR (SomDig_GueltigBis__c )
), SomDig_UmsatzGesamtMN2__c*(DATE(YEAR(TODAY()),12,31)-SomDig_GueltigVon__c+ 1)/(SomDig_GueltigBis__c-SomDig_GueltigVon__c+1),
0)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>zeigt Anteil des Commitments im AJ</inlineHelpText>
        <label>Anteil der Commitments im AJ</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SomDig_Bemerkung__c</fullName>
        <description>Kommentare, Beschreibungen, Zusatzinfos, etc.</description>
        <inlineHelpText>Kommentare, Beschreibungen, Zusatzinfos, etc.</inlineHelpText>
        <label>Bemerkung</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SomDig_CommitmentInhaber__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Wer ist für dieses Commitment verantwortlich?</description>
        <inlineHelpText>Wer ist für dieses Commitment verantwortlich?</inlineHelpText>
        <label>Commitment Inhaber</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Commitments_Digital_Neu</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SomDig_CurrentModel__c</fullName>
        <description>Commitment nach aktuellem Rabattmodell (ab2015)</description>
        <formula>!ISBLANK( SomDig_Kundenrabatt_InPage__c )
||
!ISBLANK(  SomDig_Kundenrabatt_InStream__c )
||
!ISBLANK(  SomDig_Sonderrabatt_InPage__c   )
||
!ISBLANK(  SomDig_Sonderrabatt_InStream__c   )
||
!ISBLANK(   SomDig_Naturalrabatt_Inpage__c )</formula>
        <inlineHelpText>Commitment nach aktuellem Rabattmodell (ab2015)</inlineHelpText>
        <label>aktuelles Rabattmodell</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SomDig_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Hilfsfeld; dient zur Steuerung von Warning Flag in einem Workflow (wenn &apos;TRUE&apos; dann rotes Flag, wenn &apos;FALSE&apos;, dann grün).</description>
        <inlineHelpText>Hilfsfeld; dient zur Steuerung von Warning Flag (wenn &apos;TRUE&apos; dann rotes Flag, wenn &apos;FALSE&apos;, dann grün)</inlineHelpText>
        <label>Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SomDig_GesamtrabattMobileInPage__c</fullName>
        <description>Summe aller Mobile InPage Rabatte</description>
        <inlineHelpText>Summe aller Mobile InPage Rabatte eintragen (Kundenrabatt daraus konsekutiv berechnet)</inlineHelpText>
        <label>InPage Mobile gesamt</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SomDig_GesamtrabattMobileInStream__c</fullName>
        <description>Summe aller Mobile InStream Rabatte</description>
        <inlineHelpText>Summe aller Mobile InStream Rabatte eintragen (Kundenrabatt daraus konsekutiv berechnet)</inlineHelpText>
        <label>InStream Mobile gesamt</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SomDig_GesamtrabattOnlineInPage__c</fullName>
        <description>Summe aller Mobile Online InPage (konsekutiv berechnet)</description>
        <inlineHelpText>Summe aller Mobile Online InPage (konsekutiv berechnet)</inlineHelpText>
        <label>InPage Online gesamt</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SomDig_GesamtrabattOnlineInStream__c</fullName>
        <description>Summe aller Mobile Online InStream (konsekutiv berechnet)</description>
        <inlineHelpText>Summe aller Mobile Online InStream (konsekutiv berechnet)</inlineHelpText>
        <label>InStream Online gesamt</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SomDig_GeschlossenAm__c</fullName>
        <description>Wann wurde das Commitment abgeschlossen?</description>
        <inlineHelpText>Wann wurde das Commitment abgeschlossen?</inlineHelpText>
        <label>geschlossen am</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SomDig_GueltigBis__c</fullName>
        <description>bis wann ist das Commitment gültig?</description>
        <inlineHelpText>bis wann ist das Commitment gültig?</inlineHelpText>
        <label>gültig bis</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SomDig_GueltigVon__c</fullName>
        <description>ab wann ist das Commitment gültig?</description>
        <inlineHelpText>ab wann ist das Commitment gültig?</inlineHelpText>
        <label>gültig von</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SomDig_KundenRabattMobileInPage__c</fullName>
        <description>wird automatisch, anhand von Gesamt-Rabatt und Agentur-Rabatt zusammengerechnet</description>
        <formula>IF(SomDig_Agentur_Rabatt__c &lt;=  SomDig_GesamtrabattMobileInPage__c ,(
(SomDig_GesamtrabattMobileInPage__c -  SomDig_Agentur_Rabatt__c)/(1- SomDig_Agentur_Rabatt__c)
),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>wird automatisch, anhand von Gesamt-Rabatt und Agentur-Rabatt zusammengerechnet</inlineHelpText>
        <label>InPage Mobile Kunden-Rabatt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SomDig_KundenRabattMobileInStream__c</fullName>
        <description>wird automatisch, anhand von Gesamt-Rabatt und Agentur-Rabatt zusammengerechnet</description>
        <formula>IF(AND(SomDig_Agentur_Rabatt__c &lt; SomDig_GesamtrabattMobileInStream__c, SomDig_Sonderrabatt_InStream__c &lt; SomDig_GesamtrabattMobileInStream__c),
((SomDig_GesamtrabattMobileInStream__c - SomDig_Agentur_Rabatt__c - SomDig_Sonderrabatt_InStream__c +(SomDig_Sonderrabatt_InStream__c*SomDig_Agentur_Rabatt__c))/(1- SomDig_Agentur_Rabatt__c - SomDig_Sonderrabatt_InStream__c +(SomDig_Sonderrabatt_InStream__c*SomDig_Agentur_Rabatt__c))),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>wird automatisch, anhand von Gesamt-Rabatt und Agentur-Rabatt zusammengerechnet</inlineHelpText>
        <label>InStream Mobile Kunden-Rabatt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SomDig_KundenRabattOnlineInPage__c</fullName>
        <description>wird automatisch, anhand von Gesamt-Rabatt und Agentur-Rabatt zusammengerechnet</description>
        <formula>IF(SomDig_Agentur_Rabatt__c &lt;= SomDig_GesamtrabattOnlineInPage__c,((SomDig_GesamtrabattOnlineInPage__c - SomDig_Agentur_Rabatt__c) / (1 - SomDig_Agentur_Rabatt__c)),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>wird automatisch, anhand von Gesamt-Rabatt und Agentur-Rabatt zusammengerechnet</inlineHelpText>
        <label>InPage Online Kunden-Rabatt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SomDig_KundenRabattOnlineInStream__c</fullName>
        <description>wird automatisch, anhand von Gesamt-Rabatt und Agentur-Rabatt zusammengerechnet</description>
        <formula>IF(AND(SomDig_Agentur_Rabatt__c &lt; SomDig_GesamtrabattOnlineInStream__c, SomDig_Sonderrabatt_InStream__c &lt; SomDig_GesamtrabattOnlineInStream__c),
((SomDig_GesamtrabattOnlineInStream__c - SomDig_Agentur_Rabatt__c- SomDig_Sonderrabatt_InStream__c +(SomDig_Sonderrabatt_InStream__c*SomDig_Agentur_Rabatt__c))/(1- SomDig_Agentur_Rabatt__c- SomDig_Sonderrabatt_InStream__c +(SomDig_Sonderrabatt_InStream__c*SomDig_Agentur_Rabatt__c))),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>wird automatisch, anhand von Gesamt-Rabatt und Agentur-Rabatt zusammengerechnet</inlineHelpText>
        <label>InStream Online Kunden-Rabatt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SomDig_Kundenrabatt_InPage__c</fullName>
        <description>Kundenrabatt-InPage gesamt</description>
        <inlineHelpText>Kundenrabatt-InPage gesamt</inlineHelpText>
        <label>Kundenrabatt-InPage</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SomDig_Kundenrabatt_InStream__c</fullName>
        <description>Kundenrabatt-InStream gesamt</description>
        <inlineHelpText>Kundenrabatt-InStream gesamt</inlineHelpText>
        <label>Kundenrabatt-InStream</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SomDig_Multiscreen__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Bezeichnung für Multiscreen Commitments.</description>
        <inlineHelpText>Rabatte für Video (Mobile/Online) können entweder als &apos;Multiscreen&apos; oder &apos;stand alone&apos; vergeben werden und sind unterschiedlich; Es ist keine Aufteilung der Gesamtsumme möglich!</inlineHelpText>
        <label>Multiscreen</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SomDig_NR_MobileInPage__c</fullName>
        <description>Wie viel Prozent NR erhält der Kunde für Mobile InPage?</description>
        <inlineHelpText>Wie viel Prozent NR erhält der Kunde für Mobile InPage? (Momentan nicht Genehmigungsrelevant)</inlineHelpText>
        <label>InPage Mobile Natural-Rabatt</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SomDig_NR_OnlineInPage__c</fullName>
        <description>Wie viel Prozent NR erhält der Kunde für Online InPage?</description>
        <inlineHelpText>Wie viel Prozent NR erhält der Kunde für OnlineInPage? (Momentan nicht Genehmigungsrelevant)</inlineHelpText>
        <label>InPage Online Natural-Rabatt</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SomDig_Naturalrabatt_Inpage__c</fullName>
        <description>Naturalrabatt-Inpage gesamt</description>
        <inlineHelpText>Naturalrabatt-Inpage gesamt</inlineHelpText>
        <label>Naturalrabatt-Inpage</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SomDig_OldId__c</fullName>
        <description>Verlinkung zu alten Commitments</description>
        <inlineHelpText>Verlinkung zu alten Commitments</inlineHelpText>
        <label>Old_Id</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SomDig_PayfaktorInpageY__c</fullName>
        <description>Hilfsfeld für Sales Digital, siehe Ticket 3214</description>
        <inlineHelpText>Aufsplittung von y zwischen Mediagattungs-Differenzierung InPage und InStream</inlineHelpText>
        <label>Payfaktor InPage y</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SomDig_PayfaktorInstreamY__c</fullName>
        <description>Hilfsfeld für Sales Digital, siehe Ticket 3214</description>
        <inlineHelpText>Aufsplittung von y zwischen Mediagattungs-Differenzierung InPage und InStream</inlineHelpText>
        <label>Payfaktor InStream y</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SomDig_RabattFreigegeben__c</fullName>
        <description>Flag bzgl. Freigabe-Status.
Wenn ein oder mehrere Rabatte in einem schon genehmigten Commitment weiter erhöht werden, müssen Freigabeprozess durchlaufen. Der Flag bleibt auf &apos;rot&apos; auch wenn solche Rabatte auf den ursprünglichen (genehmigten) Wert zurückgesetzt werden -&gt; Commitment muß noch einmal freigegeben werden!</description>
        <formula>IF(SomDig_Flag__c  = TRUE,IMAGE(&quot;/servlet/servlet.FileDownload?file=015D0000001p0YX&quot;, &quot;Abgelehnt oder Genehmigungsprozess nicht initiiert&quot;),
IMAGE(&quot;/servlet/servlet.FileDownload?file=015D0000001p0Yh&quot;, &quot;Genehmigt oder unter Limit&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Rot zeigt, daß die Rabatte, die den Limit unterschreiten, entweder nicht genehmigt sind, oder daß, die schon genehmigte Rabatte weiter erhöht sind &amp; erneut die Freigabe benötigen; Grün bedeutet, daß die Rabatte freigegeben sind oder unter Limits liegen.</inlineHelpText>
        <label>Rabatt freigegeben</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SomDig_RabattGenehmigt__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Hilfsfeld, schreibgeschützt; dient zur Steuerung vom Approval-Prozess via Workflow</description>
        <inlineHelpText>Hilfsfeld, schreibgeschützt; dient zur Steuerung vom Approval-Prozess.</inlineHelpText>
        <label>Rabatt genehmigt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SomDig_Sonderrabatt_InPage__c</fullName>
        <description>Sonderrabatt-InPage gesamt</description>
        <inlineHelpText>Sonderrabatt-InPage gesamt</inlineHelpText>
        <label>Sonderrabatt-InPage</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SomDig_Sonderrabatt_InStream__c</fullName>
        <description>Sonderrabatt-InStream gesamt</description>
        <inlineHelpText>Sonderrabatt-InStream gesamt</inlineHelpText>
        <label>Sonderrabatt-InStream</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SomDig_Status__c</fullName>
        <description>In welchem Status befindet sich dieses Commitment?</description>
        <inlineHelpText>In welchem Status befindet sich dieses Commitment?</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Potenzielles Commitment</fullName>
                <color>#DDDDDD</color>
            </picklistValues>
            <picklistValues>
                <fullName>Erstes Angebot</fullName>
                <color>#66FFFF</color>
            </picklistValues>
            <picklistValues>
                <fullName>Kunde ist sehr interessiert</fullName>
                <color>#3333FF</color>
            </picklistValues>
            <picklistValues>
                <fullName>Nachverhandeltes Angebot</fullName>
                <color>#F3D904</color>
            </picklistValues>
            <picklistValues>
                <fullName>Gentlemen&apos;s Agreement</fullName>
                <color>#33FF33</color>
            </picklistValues>
            <picklistValues>
                <fullName>Angenommen</fullName>
                <color>#009900</color>
            </picklistValues>
            <picklistValues>
                <fullName>Abgelehnt</fullName>
                <color>#FF0000</color>
            </picklistValues>
            <picklistValues>
                <fullName>On hold</fullName>
                <color>#666666</color>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SomDig_UmsatzGesamtMN2__c</fullName>
        <description>Wie hoch ist der erwartete Umsatz aus diesem Commitment? MediaNetto 2</description>
        <inlineHelpText>Wie hoch ist der erwartete Umsatz aus diesem Commitment? MediaNetto 2</inlineHelpText>
        <label>Commitmenthöhe MN2</label>
        <precision>8</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SomDig_Wahrscheinlichkeit__c</fullName>
        <description>zeigt die Abschlusswahrscheinlichkeit bezogen auf Status</description>
        <formula>CASE(SomDig_Status__c,
&quot;Potenzielles Commitment&quot;, 0.05,
&quot;Erstes Angebot&quot;, 0.25,
&quot;Nachverhandeltes Angebot&quot;, 0.50,
&quot;Kunde ist sehr interessiert&quot;, 0.75,
&quot;Gentlemen&apos;s Agreement&quot;,1,
&quot;Angenommen&quot;, 1,
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>zeigt die Abschlusswahrscheinlichkeit bezogen auf Status</inlineHelpText>
        <label>Wahrscheinlichkeit (%)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SomDig_Werbetreibende__c</fullName>
        <description>übernommen aus WT-AG Beziehung</description>
        <formula>SomDig_WtAgBeziehung__r.SomDig_Werbetreibender__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>übernommen aus WT-AG Beziehung</inlineHelpText>
        <label>Werbetreibende</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SomDig_WtAgBeziehung__c</fullName>
        <description>Zugehörige Werbetreibende-Agentur Beziehung</description>
        <inlineHelpText>Zugehörige Werbetreibende-Agentur Beziehung</inlineHelpText>
        <label>WT-AG Beziehung</label>
        <referenceTo>SomDig_WtAgBeziehung__c</referenceTo>
        <relationshipName>Commitments_Digital</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SomDig_WtAgName__c</fullName>
        <description>Name der zugehörigen Werbetreibende-Agentur Beziehung</description>
        <formula>SomDig_WtAgBeziehung__r.SomDig_BeziehungAccountname__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Name der zugehörigen Werbetreibende-Agentur Beziehung</inlineHelpText>
        <label>WT-AG Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Som_Vertriebsteam_Commitment__c</fullName>
        <description>In welchem Vertriebsteam Digital ist der Commitment-Inhaber?</description>
        <formula>Text(  SomDig_CommitmentInhaber__r.SomDig_SalesTeam__c )</formula>
        <inlineHelpText>In welchem Vertriebsteam Digital ist der Commitment-Inhaber?</inlineHelpText>
        <label>Vertriebsteam</label>
        <type>Text</type>
    </fields>
    <label>Commitment Digital</label>
    <listViews>
        <fullName>All</fullName>
        <columns>SomDig_RabattFreigegeben__c</columns>
        <columns>NAME</columns>
        <columns>SomDig_Agentur__c</columns>
        <columns>SomDig_Werbetreibende__c</columns>
        <columns>SomDig_WtAgBeziehung__c</columns>
        <columns>SomDig_Status__c</columns>
        <columns>SomDig_Wahrscheinlichkeit__c</columns>
        <columns>SomDig_GueltigVon__c</columns>
        <columns>SomDig_GueltigBis__c</columns>
        <columns>SomDig_UmsatzGesamtMN2__c</columns>
        <columns>SomDig_GeschlossenAm__c</columns>
        <columns>SomDig_CommitmentInhaber__c</columns>
        <filterScope>Everything</filterScope>
        <label>Alle</label>
        <language>de</language>
    </listViews>
    <listViews>
        <fullName>Commitments_2014</fullName>
        <columns>SomDig_RabattFreigegeben__c</columns>
        <columns>NAME</columns>
        <columns>SomDig_Werbetreibende__c</columns>
        <columns>SomDig_Agentur__c</columns>
        <columns>SomDig_WtAgBeziehung__c</columns>
        <columns>SomDig_GeschlossenAm__c</columns>
        <columns>SomDig_GueltigVon__c</columns>
        <columns>SomDig_GueltigBis__c</columns>
        <columns>SomDig_Status__c</columns>
        <columns>SomDig_Wahrscheinlichkeit__c</columns>
        <columns>Som_Vertriebsteam_Commitment__c</columns>
        <columns>SomDig_CommitmentInhaber__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SomDig_GueltigVon__c</field>
            <operation>greaterOrEqual</operation>
            <value>1/1/2014</value>
        </filters>
        <filters>
            <field>SomDig_Status__c</field>
            <operation>equals</operation>
            <value>Angenommen</value>
        </filters>
        <filters>
            <field>SomDig_GueltigBis__c</field>
            <operation>lessOrEqual</operation>
            <value>12/31/2014</value>
        </filters>
        <label>Commitments 2014</label>
        <language>de</language>
    </listViews>
    <listViews>
        <fullName>Commitments_AJ</fullName>
        <columns>SomDig_RabattFreigegeben__c</columns>
        <columns>NAME</columns>
        <columns>SomDig_Werbetreibende__c</columns>
        <columns>SomDig_Agentur__c</columns>
        <columns>SomDig_WtAgBeziehung__c</columns>
        <columns>SomDig_GeschlossenAm__c</columns>
        <columns>SomDig_GueltigVon__c</columns>
        <columns>SomDig_GueltigBis__c</columns>
        <columns>SomDig_Status__c</columns>
        <columns>SomDig_Wahrscheinlichkeit__c</columns>
        <columns>Som_Vertriebsteam_Commitment__c</columns>
        <columns>SomDig_CommitmentInhaber__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SomDig_AJ__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Commitments AJ</label>
        <language>de</language>
    </listViews>
    <listViews>
        <fullName>Commitments_G_ltigkeit_unvollst_ndig</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>NAME</columns>
        <columns>SomDig_Agentur__c</columns>
        <columns>SomDig_Werbetreibende__c</columns>
        <columns>SomDig_UmsatzGesamtMN2__c</columns>
        <columns>SomDig_GueltigVon__c</columns>
        <columns>SomDig_GueltigBis__c</columns>
        <columns>SomDig_Kundenrabatt_InPage__c</columns>
        <columns>SomDig_Kundenrabatt_InStream__c</columns>
        <columns>SomDig_Sonderrabatt_InPage__c</columns>
        <columns>SomDig_Sonderrabatt_InStream__c</columns>
        <columns>SomDig_Naturalrabatt_Inpage__c</columns>
        <columns>SomDig_WtAgBeziehung__c</columns>
        <columns>SomDig_GeschlossenAm__c</columns>
        <columns>SomDig_Status__c</columns>
        <columns>SomDig_AnteilCommitmentsAJ__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SomDig_GueltigVon__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>SomDig_GueltigBis__c</field>
            <operation>equals</operation>
        </filters>
        <label>Commitments Gültigkeit unvollständig</label>
        <language>de</language>
    </listViews>
    <listViews>
        <fullName>SomDig_AlleAJCommitmentsAngenommen</fullName>
        <columns>NAME</columns>
        <columns>SomDig_CurrentModel__c</columns>
        <columns>SomDig_Agentur__c</columns>
        <columns>SomDig_Werbetreibende__c</columns>
        <columns>SomDig_WtAgBeziehung__c</columns>
        <columns>SomDig_GueltigVon__c</columns>
        <columns>SomDig_GueltigBis__c</columns>
        <columns>SomDig_GeschlossenAm__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SomDig_AJ__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>SomDig_Status__c</field>
            <operation>equals</operation>
            <value>Gentlemen&apos;s Agreement,Angenommen</value>
        </filters>
        <label>Alle AJ Commitments Angenommen</label>
        <language>de</language>
    </listViews>
    <nameField>
        <displayFormat>Commitment-Digital-{000}</displayFormat>
        <label>Commitment Digital Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Commitments Digital</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>SomDig_CommCheck</fullName>
        <active>true</active>
        <description>If any discount is over 65% and if not approved and stage is &quot;Potentielles Commitment&quot;, the stage can not be set to anything else than &quot;Potentielles Commitment&quot;</description>
        <errorConditionFormula>ISPICKVAL(PRIORVALUE(SomDig_Status__c),&quot;Potenzielles Commitment&quot;)
&amp;&amp;
ISCHANGED(SomDig_Status__c)
&amp;&amp; SomDig_RabattGenehmigt__c = FALSE
&amp;&amp; (OR(
SomDig_Kundenrabatt_InPage__c &gt; 0.65,
SomDig_Kundenrabatt_InStream__c &gt; 0.65,
SomDig_Sonderrabatt_InPage__c &gt; 0.65,
SomDig_Sonderrabatt_InStream__c &gt; 0.65,
SomDig_Agentur_Rabatt__c  &gt; 0.65
))</errorConditionFormula>
        <errorDisplayField>SomDig_Status__c</errorDisplayField>
        <errorMessage>Einer der Rabatte ist &gt;65% ODER das Commitment ist nicht genehmigt. Daher kann dieses Commitment nicht auf eine andere Phase als &quot;Potenzielles Commitment&quot; gestellt werden.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SomDig_CommCheck2</fullName>
        <active>true</active>
        <description>Stage &quot;Angenommen&quot; can only be chosen if approved (SomDig_RabattGenehmigt__c = true).</description>
        <errorConditionFormula>ISPICKVAL( SomDig_Status__c , &quot;Angenommen&quot;)
&amp;&amp;
SomDig_RabattGenehmigt__c = FALSE</errorConditionFormula>
        <errorDisplayField>SomDig_Status__c</errorDisplayField>
        <errorMessage>Status &quot;Angenommen&quot; kann erst nach erfolgreicher Genehmigung gesetzt werden. Bitte lassen sie das Commitment genehmigen bzw. stellen eine andere Status ein.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SomDig_CommCheck3</fullName>
        <active>true</active>
        <description>If COM is approved and in a phase &quot;Angenommen&quot; NO Discounts can be changed afterwards at all.</description>
        <errorConditionFormula>AND(SomDig_RabattGenehmigt__c = TRUE, ISPICKVAL(SomDig_Status__c,&quot;Angenommen&quot;),
OR(ISCHANGED(SomDig_Kundenrabatt_InPage__c),
ISCHANGED(SomDig_Kundenrabatt_InStream__c),
ISCHANGED(SomDig_Sonderrabatt_InPage__c),
ISCHANGED(SomDig_Sonderrabatt_InStream__c),
ISCHANGED(SomDig_Agentur_Rabatt__c)))</errorConditionFormula>
        <errorMessage>Das Commitment ist genehmigt und angenommen. Rabatte dürfen nicht mehr verändert werden.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SomDig_CommitmentMaxLaufzeit</fullName>
        <active>true</active>
        <description>Commitment max. Laufzeit darf nicht 1 Jahr überschreiten</description>
        <errorConditionFormula>SomDig_GueltigBis__c -  SomDig_GueltigVon__c &gt; 366</errorConditionFormula>
        <errorMessage>Commitment max. Laufzeit (Gültigkeit) darf nicht 1 Jahr überschreiten</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SomDig_Gueltigkeitsbereich</fullName>
        <active>true</active>
        <description>&quot;bis&quot;-Datum darf nicht kleiner sein als &quot;von&quot;-Datum</description>
        <errorConditionFormula>SomDig_GueltigVon__c &gt; SomDig_GueltigBis__c</errorConditionFormula>
        <errorMessage>Bitte Gültigkeitszeitraum des Commitments überprüfen!</errorMessage>
    </validationRules>
</CustomObject>